# EBTS_tracking

devel/: .catkin  .rosinstall  local_setup.sh
devel/include/my_message/: GraphData.h
devel/include/prophesee_event_msgs/: Event.h  EventArray.h
devel/lib/dynamixel_sdk_examples/: bulk_read_write_node  indirect_address_node  read_write_node  sync_read_write_node
devel/lib/dynamixel_workbench_controllers/: dynamixel_workbench_controllers  find_dynamixel
devel/lib/dynamixel_workbench_operators/: joint_operator  wheel_operator
devel/lib/pkgconfig/: dynamixel_sdk.pc  dynamixel_sdk_examples.pc  dynamixel_workbench_controllers.pc  dynamixel_workbench_msgs.pc  dynamixel_workbench_operators.pc  dynamixel_workbench_toolbox.pc  my_message.pc  prophesee_event_msgs.pc  prophesee_ros_driver.pc  tracking.pc
devel/lib/prophesee_ros_driver/: prophesee_ros_publisher  prophesee_ros_viewer
devel/lib/tracking/: prophesee_ros_spatter
src/tracking/biases/: DJN.bias  DJN3.bias  DJN4.bias  whisker.bias  whisker2speriod.bias
src/tracking/metavision_hal_viewer/: 1200_refr_one_pixel.raw  1200_refr_ten_pixel.raw  1500_refr_one_pixel.raw  1600_refr_one_pixel.raw  1600_refr_ten_pixel.raw  1700_refr_ten_pixel.raw  700_refr_ten_pixel.raw  CMakeLists.txt  README.md  frequency_check.py  metavision_hal_viewer.cpp  out.bias
src/tracking/metavision_raw_to_csv/: CMakeLists.txt  README.md  metavision_raw_to_csv.cpp
src/tracking/src/: example1.csv  example10.csv  example11.csv  example12.csv  example13.csv  example2.csv  example3.csv  example4.csv  example5.csv  example6.csv  example7.csv  (+3 more)
(+43 files in other folders)
